fixed warnings in database file